RESOLVED FIXED223824
Fix leaks in WKInspectorResourceURLSchemeHandler
https://bugs.webkit.org/show_bug.cgi?id=223824
Summary Fix leaks in WKInspectorResourceURLSchemeHandler
David Kilzer (:ddkilzer)
Reported 2021-03-26 16:07:56 PDT
Fix leaks in WKInspectorResourceURLSchemeHandler. Missing some use of adoptNS() and a local variable is never released.
Attachments
Patch v1 (3.11 KB, patch)
2021-03-26 16:14 PDT, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2021-03-26 16:14:04 PDT
Created attachment 424414 [details] Patch v1
Joseph Pecoraro
Comment 2 2021-03-27 00:46:07 PDT
Comment on attachment 424414 [details] Patch v1 Nice!
EWS
Comment 3 2021-03-27 10:15:24 PDT
Committed r275135: <https://commits.webkit.org/r275135> All reviewed patches have been landed. Closing bug and clearing flags on attachment 424414 [details].
Radar WebKit Bug Importer
Comment 4 2021-03-27 10:16:15 PDT
Note You need to log in before you can comment on or make changes to this bug.