Fix leaks in WKInspectorResourceURLSchemeHandler <https://webkit.org/b/223824>

Reviewed by Joseph Pecoraro.

* UIProcess/Inspector/mac/WKInspectorResourceURLSchemeHandler.mm:
(-[WKInspectorResourceURLSchemeHandler webView:startURLSchemeTask:]):
- Make use of adoptNS() when assigning a newly allocated, +1
  retained Objective-C object to a RetainPtr<>.
- Also fix leak of local NSHTTPURLResponse object by using a
  RetainPtr<>.


Canonical link: https://commits.webkit.org/235840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275135 268f45cc-cd09-0410-ab3c-d52691b4dbfc